Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,60 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Cua-rơ nữ Việt Nam gặp nạn vẫn giành Áo Trắng",
+    "content": "Trong giải Biwase Tour of Vietnam 2025, cua-rơ Lâm Thị Thùy Dương đã gặp phải tai nạn gây gãy tay nhưng vẫn xuất sắc về đích và giành được chiếc Áo Trắng dành cho tay đua trẻ xuất sắc nhất. Dù bị thương nặng, cô vẫn nén đau và hoàn thành chặng đua, đứng thứ bảy chung cuộc, đồng thời vào top 10 tay đua xuất sắc nhất giải. Đây là một thành tích đáng ghi nhận cho tay đua trẻ này, đặc biệt trong bối cảnh giải đấu được UCI công nhận.",
+    "link": "https://vnexpress.net/cua-ro-nu-viet-nam-gap-nan-van-gianh-ao-trang-4859943.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Lâm Thị Thùy Dương đã gặp chấn thương trong sự kiện nào?",
+    "answers": [
+      {
+        "text": "Biwase Tour of Vietnam 2025",
+        "correct": true
+      },
+      {
+        "text": "Tour de France",
+        "correct": false
+      },
+      {
+        "text": "Olympic Tokyo",
+        "correct": false
+      },
+      {
+        "text": "Sea Games 31",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bắt thêm nam thanh niên trong đường dây mua bán tài khoản ngân hàng",
+    "content": "Công an tỉnh Bình Dương đã bắt giữ Dương Hữu Cường, 22 tuổi, trong vụ án mua bán tài khoản ngân hàng, gây thiệt hại hơn 100 tỉ đồng cho hơn 200 người. Cường tham gia mở tài khoản ngân hàng cho nhóm lừa đảo, đứng tên doanh nghiệp 'ma' nhằm bán tài khoản cho người ở Campuchia. Các điều tra cho thấy nhóm này đã sử dụng tài khoản để thực hiện nhiều hành vi lừa đảo, chiếm đoạt tổng số tiền lớn từ các nạn nhân.",
+    "link": "https://tuoitre.vn/bat-them-nam-thanh-nien-trong-duong-day-mua-ban-tai-khoan-ngan-hang-20250311150238932.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao Dương Hữu Cường bị bắt giữ?",
+    "answers": [
+      {
+        "text": "Vì tham gia vào đường dây mua bán tài khoản ngân hàng lừa đảo.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có việc làm ổn định.",
+        "correct": false
+      },
+      {
+        "text": "Vì nghiện ma túy.",
+        "correct": false
+      },
+      {
+        "text": "Vì mở tài khoản ngân hàng giả mạo.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phạt 900 triệu đồng vì mua bán bùn thải nạo vét cải tạo kênh",
     "content": "Ngày 11-3-2025, UBND huyện Tân Hưng, Long An đã thông báo về việc xử phạt 900 triệu đồng đối với hai cá nhân và một công ty vì vi phạm liên quan đến việc mua bán bùn thải nạo vét từ dự án cải tạo kênh Hồng Ngự - Vĩnh Hưng. Công ty TNHH xây dựng cảnh quan Bảo Tín đã mua hơn 15.000 m3 bùn thải và chuyển giao cho đơn vị khác mà không có chức năng xử lý. Hành vi vi phạm này bị xử phạt do không tuân thủ quy định về chuyển giao chất thải rắn thông thường.",
     "link": "https://tuoitre.vn/phat-900-trieu-dong-vi-mua-ban-bun-thai-nao-vet-cai-tao-kenh-20250311150752149.htm",
@@ -622,33 +676,6 @@
     ]
   },
   {
-    "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
-    "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
-    "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao viêm amidan lại dễ tái phát khi thời tiết thay đổi?",
-    "answers": [
-      {
-        "text": "Do môi trường thuận lợi cho vi khuẩn phát triển và hệ miễn dịch suy giảm.",
-        "correct": true
-      },
-      {
-        "text": "Vì amidan không có chức năng miễn dịch.",
-        "correct": false
-      },
-      {
-        "text": "Do thời tiết lạnh làm amidan viêm.",
-        "correct": false
-      },
-      {
-        "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
     "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
     "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
@@ -671,6 +698,33 @@
       },
       {
         "text": "Học sinh không phải thi nếu không muốn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
+    "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
+    "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao viêm amidan lại dễ tái phát khi thời tiết thay đổi?",
+    "answers": [
+      {
+        "text": "Do môi trường thuận lợi cho vi khuẩn phát triển và hệ miễn dịch suy giảm.",
+        "correct": true
+      },
+      {
+        "text": "Vì amidan không có chức năng miễn dịch.",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết lạnh làm amidan viêm.",
+        "correct": false
+      },
+      {
+        "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
         "correct": false
       }
     ]
@@ -3007,6 +3061,33 @@
     ]
   },
   {
+    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
+    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
+    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
+    "answers": [
+      {
+        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
+        "correct": false
+      },
+      {
+        "text": "Va chạm giao thông không bao giờ bị phạt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bác sĩ vẽ bản đồ tim cứu sản phụ thoát cửa tử",
     "content": "Một sản phụ 36 tuổi đã thoát khỏi nguy cơ tử vong trong ca mổ sinh nhờ vào sự can thiệp kịp thời của bác sĩ. Trong quá trình mang thai, chị gặp phải tình trạng nhịp tim nhanh lên đến 190 lần/phút và không đáp ứng với thuốc điều trị. Các bác sĩ đã sử dụng kỹ thuật lập bản đồ tim 3D để xác định nguyên nhân và thực hiện đốt điện giúp nhịp tim trở lại bình thường, đảm bảo sự an toàn cho cả mẹ và bé.",
     "link": "https://vnexpress.net/bac-si-ve-ban-do-tim-cuu-san-phu-thoat-cua-tu-4858948.html",
@@ -3033,33 +3114,6 @@
       },
       {
         "text": "Không thực hiện mổ mà chỉ theo dõi tình trạng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
-    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
-    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
-    "answers": [
-      {
-        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
-        "correct": false
-      },
-      {
-        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
-        "correct": false
-      },
-      {
-        "text": "Va chạm giao thông không bao giờ bị phạt.",
         "correct": false
       }
     ]
@@ -3185,33 +3239,6 @@
     ]
   },
   {
-    "title": "Đời buồn của cậu bé ước được đến trường",
-    "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
-    "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
-    "cat": "giao-duc",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Bình An ước mơ điều gì trong cuộc sống?",
-    "answers": [
-      {
-        "text": "Được đến trường",
-        "correct": true
-      },
-      {
-        "text": "Có nhiều bạn bè",
-        "correct": false
-      },
-      {
-        "text": "Có sức khỏe tốt",
-        "correct": false
-      },
-      {
-        "text": "Được đi du lịch",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Con trai Courtois nguy cơ vô gia cư",
     "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
     "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
@@ -3234,6 +3261,33 @@
       },
       {
         "text": "Courtois không muốn chu cấp cho họ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đời buồn của cậu bé ước được đến trường",
+    "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
+    "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Bình An ước mơ điều gì trong cuộc sống?",
+    "answers": [
+      {
+        "text": "Được đến trường",
+        "correct": true
+      },
+      {
+        "text": "Có nhiều bạn bè",
+        "correct": false
+      },
+      {
+        "text": "Có sức khỏe tốt",
+        "correct": false
+      },
+      {
+        "text": "Được đi du lịch",
         "correct": false
       }
     ]
@@ -3552,33 +3606,6 @@
     ]
   },
   {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -3605,6 +3632,33 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
@@ -4297,64 +4351,6 @@
       },
       {
         "text": "Viện trợ vũ khí đã bị đình chỉ từ năm ngoái.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "MG4 EV đời 2024 giảm giá gần 300 triệu đồng",
-    "content": "Mẫu xe MG4 EV đời 2024 vừa được giảm giá mạnh, gần 300 triệu đồng, khiến giá giao dịch hiện tại chỉ còn khoảng 650 triệu đồng so với mức giá gốc 948 triệu đồng. Đây là mức giảm cao nhất trong phân khúc xe phổ thông cỡ B tại Việt Nam. Các đại lý đưa ra khuyến mãi này nhằm đẩy hàng nhanh và có thể là do xe thuộc diện nhà máy thưởng cho đại lý. Mặc dù mức giảm này không hiếm gặp trong thị trường ôtô Việt, nhưng nó thực sự nổi bật trong phân khúc này.",
-    "link": "https://vnexpress.net/mg4-ev-doi-2024-giam-gia-gan-300-trieu-dong-4859159.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao MG4 EV đời 2024 lại giảm giá gần 300 triệu đồng?",
-    "answers": [
-      {
-        "text": "Do đại lý muốn đẩy hàng nhanh",
-        "correct": true
-      },
-      {
-        "text": "Chính sách từ nhà sản xuất",
-        "correct": false
-      },
-      {
-        "text": "Do cạnh tranh với các hãng xe khác",
-        "correct": false
-      },
-      {
-        "text": "Giá trị thương hiệu giảm",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Long An nghiên cứu hỗ trợ 250 triệu đồng mỗi chuyến tàu chở container vào cảng",
-    "content": "Tỉnh Long An đang nghiên cứu chính sách hỗ trợ 250 triệu đồng cho mỗi chuyến tàu chở container vào cảng, nhằm thu hút hàng hóa và phát triển kinh tế địa phương. Các công ty sẽ nhận thêm hỗ trợ 1 triệu đồng cho container 20 feet và 1,5 triệu đồng cho container 40 feet. Chính sách này được thực hiện nhằm giải quyết tình trạng thiếu container và khuyến khích vận chuyển hàng hóa qua cảng, góp phần nâng cao hình ảnh đầu tư của tỉnh.",
-    "link": "https://tuoitre.vn/long-an-nghien-cuu-ho-tro-250-trieu-dong-moi-chuyen-tau-cho-container-vao-cang-20250310155349139.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Long An sẽ hỗ trợ bao nhiêu tiền cho mỗi chuyến tàu chở container vào cảng?",
-    "answers": [
-      {
-        "text": "250 triệu đồng",
-        "correct": true
-      },
-      {
-        "text": "200 triệu đồng",
-        "correct": false
-      },
-      {
-        "text": "300 triệu đồng",
-        "correct": false
-      },
-      {
-        "text": "150 triệu đồng",
-        "correct": false
-      },
-      {
-        "text": "100 triệu đồng",
         "correct": false
       }
     ]
