Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,64 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Có Antony, Betis kiếm nhiều điểm hơn Real",
+    "content": "Kể từ khi Antony gia nhập Betis từ Man Utd, đội bóng này đã thu được nhiều điểm hơn cả Real và Atletico tại La Liga. Trong sáu trận đấu, Betis đã kiếm được 13 điểm, trong khi Real chỉ có tám điểm và Atletico có 11 điểm. Antony đã giúp Betis thăng tiến từ vị trí thứ 10 lên thứ 6, và đội bóng này cũng đang đua tranh cho suất dự Champions League mùa tới.",
+    "link": "https://vnexpress.net/co-antony-betis-kiem-nhieu-diem-hon-real-4859934.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Antony đã giúp Betis kiếm được bao nhiêu điểm trong sáu trận ở La Liga?",
+    "answers": [
+      {
+        "text": "13 điểm",
+        "correct": true
+      },
+      {
+        "text": "8 điểm",
+        "correct": false
+      },
+      {
+        "text": "11 điểm",
+        "correct": false
+      },
+      {
+        "text": "15 điểm",
+        "correct": false
+      },
+      {
+        "text": "6 điểm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vụ bé trai 16 tháng tuổi bị ô tô tông: Tạm đóng cửa cơ sở giữ trẻ",
+    "content": "Vào ngày 10-3, một bé trai 16 tháng tuổi đã bị ô tô tông ngay trước cơ sở giữ trẻ tư thục Tuổi Thơ tại TP Hà Tĩnh. Sau vụ tai nạn, cơ sở này đã bị tạm đóng cửa theo yêu cầu của chính quyền địa phương. Bé trai được đưa đi cấp cứu nhưng đã không qua khỏi. Cơ sở giữ trẻ này được cấp phép hoạt động vào tháng 10-2023 và hiện đang giữ 18 trẻ em dưới 3 tuổi.",
+    "link": "https://tuoitre.vn/vu-be-trai-16-thang-tuoi-bi-o-to-tong-tam-dong-cua-co-so-giu-tre-202503111614312.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 9,
+    "question": "Tại sao cơ sở giữ trẻ Tuổi Thơ bị tạm đóng cửa?",
+    "answers": [
+      {
+        "text": "Vì một bé trai 16 tháng tuổi bị ô tô tông chết ngay trước cơ sở.",
+        "correct": true
+      },
+      {
+        "text": "Vì cơ sở không có giấy phép hoạt động.",
+        "correct": false
+      },
+      {
+        "text": "Vì cơ sở không đủ điều kiện an toàn.",
+        "correct": false
+      },
+      {
+        "text": "Vì có nhiều trẻ em bị thương tại đây.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nghi vấn Neymar 'chọn' chấn thương vào sinh nhật chị gái",
     "content": "Neymar đã thông báo chấn thương cho CLB Santos chỉ 24 giờ trước trận đấu với Corinthians, trùng với dịp sinh nhật của chị gái Rafaella. Trước đó, anh đã có một chuỗi các chấn thương vào đúng ngày này trong suốt sự nghiệp, khiến nhiều người nghi ngờ về sự trùng hợp kỳ lạ. Neymar đã phản bác lại những tin đồn, khẳng định anh muốn thi đấu nhưng không thể do cảm thấy không ổn.",
     "link": "https://vnexpress.net/nghi-van-neymar-chon-chan-thuong-vao-sinh-nhat-chi-gai-4859975.html",
@@ -184,6 +242,37 @@
       },
       {
         "text": "Vì không thực hiện nghĩa vụ thuế.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Toyota Land Cruiser thêm trang bị, tăng giá gần 300 triệu đồng",
+    "content": "Toyota Land Cruiser vừa được tăng giá thêm 294 triệu đồng, nâng tổng giá bán lên 4,58 tỷ đồng từ tháng 3/2025. Mẫu SUV này không chỉ tăng giá mà còn được trang bị thêm nhiều tính năng mới như nẹp bệ bước chân phát sáng, đèn dưới nắp ca-pô và đồng hồ tốc độ lớn hơn. Tuy nhiên, một số tính năng như sạc không dây đã bị lược bỏ. Đây là lần tăng giá thứ tư kể từ khi mẫu xe này ra mắt tại Việt Nam vào tháng 7/2021, với tổng mức tăng lên tới 520 triệu đồng.",
+    "link": "https://vnexpress.net/toyota-land-cruiser-them-trang-bi-tang-gia-gan-300-trieu-dong-4859889.html",
+    "cat": "oto-xe-may",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Toyota Land Cruiser vừa tăng giá và thêm trang bị gì mới?",
+    "answers": [
+      {
+        "text": "Nẹp bệ bước chân phát sáng và đèn dưới nắp ca-pô",
+        "correct": true
+      },
+      {
+        "text": "Hệ thống âm thanh mới",
+        "correct": false
+      },
+      {
+        "text": "Màu sắc mới cho ngoại thất",
+        "correct": false
+      },
+      {
+        "text": "Công nghệ động cơ mới",
+        "correct": false
+      },
+      {
+        "text": "Hệ thống treo nâng cấp",
         "correct": false
       }
     ]
@@ -3119,6 +3208,33 @@
     ]
   },
   {
+    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
+    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
+    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
+    "answers": [
+      {
+        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
+        "correct": false
+      },
+      {
+        "text": "Va chạm giao thông không bao giờ bị phạt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bác sĩ vẽ bản đồ tim cứu sản phụ thoát cửa tử",
     "content": "Một sản phụ 36 tuổi đã thoát khỏi nguy cơ tử vong trong ca mổ sinh nhờ vào sự can thiệp kịp thời của bác sĩ. Trong quá trình mang thai, chị gặp phải tình trạng nhịp tim nhanh lên đến 190 lần/phút và không đáp ứng với thuốc điều trị. Các bác sĩ đã sử dụng kỹ thuật lập bản đồ tim 3D để xác định nguyên nhân và thực hiện đốt điện giúp nhịp tim trở lại bình thường, đảm bảo sự an toàn cho cả mẹ và bé.",
     "link": "https://vnexpress.net/bac-si-ve-ban-do-tim-cuu-san-phu-thoat-cua-tu-4858948.html",
@@ -3145,33 +3261,6 @@
       },
       {
         "text": "Không thực hiện mổ mà chỉ theo dõi tình trạng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
-    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
-    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
-    "answers": [
-      {
-        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
-        "correct": false
-      },
-      {
-        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
-        "correct": false
-      },
-      {
-        "text": "Va chạm giao thông không bao giờ bị phạt.",
         "correct": false
       }
     ]
@@ -3297,33 +3386,6 @@
     ]
   },
   {
-    "title": "Con trai Courtois nguy cơ vô gia cư",
-    "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
-    "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao con trai Courtois và Elsa Izac lại gặp nguy cơ vô gia cư?",
-    "answers": [
-      {
-        "text": "Họ có khoản nợ 63.000 bảng tiền thế chấp.",
-        "correct": true
-      },
-      {
-        "text": "Họ không có đủ tiền chi tiêu hàng ngày.",
-        "correct": false
-      },
-      {
-        "text": "Ngôi nhà của họ bị hư hỏng nặng.",
-        "correct": false
-      },
-      {
-        "text": "Courtois không muốn chu cấp cho họ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đời buồn của cậu bé ước được đến trường",
     "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
     "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
@@ -3346,6 +3408,33 @@
       },
       {
         "text": "Được đi du lịch",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Con trai Courtois nguy cơ vô gia cư",
+    "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
+    "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao con trai Courtois và Elsa Izac lại gặp nguy cơ vô gia cư?",
+    "answers": [
+      {
+        "text": "Họ có khoản nợ 63.000 bảng tiền thế chấp.",
+        "correct": true
+      },
+      {
+        "text": "Họ không có đủ tiền chi tiêu hàng ngày.",
+        "correct": false
+      },
+      {
+        "text": "Ngôi nhà của họ bị hư hỏng nặng.",
+        "correct": false
+      },
+      {
+        "text": "Courtois không muốn chu cấp cho họ.",
         "correct": false
       }
     ]
@@ -3664,6 +3753,33 @@
     ]
   },
   {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -3690,33 +3806,6 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
@@ -4324,33 +4413,6 @@
       },
       {
         "text": "Đại học Sư phạm Hà Nội",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nga trục xuất 2 nhân viên ngoại giao Anh bị cáo buộc làm gián điệp",
-    "content": "Nga đã quyết định trục xuất hai nhân viên ngoại giao Anh do bị cáo buộc hoạt động gián điệp. Cơ quan An ninh Liên bang Nga (FSB) cho biết hai công dân Anh này, bao gồm thư ký thứ hai của Đại sứ quán Anh và chồng của một nhà ngoại giao khác, đã vi phạm luật pháp Nga bằng việc cung cấp thông tin sai lệch khi xin nhập cảnh. Họ bị yêu cầu rời khỏi Nga trong vòng hai tuần và FSB cam kết sẽ tiếp tục chống lại các hoạt động tình báo nước ngoài.",
-    "link": "https://dantri.com.vn/the-gioi/nga-truc-xuat-2-nhan-vien-ngoai-giao-anh-bi-cao-buoc-lam-gian-diep-20250310155947534.htm",
-    "cat": "the-gioi",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Nga trục xuất hai nhân viên ngoại giao Anh?",
-    "answers": [
-      {
-        "text": "Do bị cáo buộc làm gián điệp",
-        "correct": true
-      },
-      {
-        "text": "Vì họ không có giấy phép làm việc",
-        "correct": false
-      },
-      {
-        "text": "Họ đã vi phạm quy định nhập cảnh",
-        "correct": false
-      },
-      {
-        "text": "Họ không tuân thủ luật pháp Nga",
         "correct": false
       }
     ]
