Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -139,6 +139,37 @@
     ]
   },
   {
+    "title": "Cuba hoàn tất quy trình trả tự do cho 553 tù nhân theo thỏa thuận với Mỹ",
+    "content": "Cuba đã hoàn tất quá trình trả tự do cho 553 tù nhân theo thỏa thuận với Mỹ, được thực hiện dưới sự trung gian của Vatican. Thỏa thuận này đã được đồng ý trong thời gian cựu Tổng thống Biden tại nhiệm, nhưng đã bị Tổng thống Trump hủy bỏ sau khi lên nắm quyền. Tuy nhiên, Cuba vẫn tiến hành thả tù nhân như đã cam kết, phản ánh bản chất nhân đạo của hệ thống tư pháp Cuba.",
+    "link": "https://dantri.com.vn/the-gioi/cuba-hoan-tat-quy-trinh-tra-tu-do-cho-553-tu-nhan-theo-thoa-thuan-voi-my-20250311144236111.htm",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Cuba đã thả bao nhiêu tù nhân theo thỏa thuận với Mỹ?",
+    "answers": [
+      {
+        "text": "553 tù nhân",
+        "correct": true
+      },
+      {
+        "text": "378 tù nhân",
+        "correct": false
+      },
+      {
+        "text": "175 tù nhân",
+        "correct": false
+      },
+      {
+        "text": "300 tù nhân",
+        "correct": false
+      },
+      {
+        "text": "400 tù nhân",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nghi vấn Neymar 'chọn' chấn thương vào sinh nhật chị gái",
     "content": "Neymar đã thông báo chấn thương cho CLB Santos chỉ 24 giờ trước trận đấu với Corinthians, trùng với dịp sinh nhật của chị gái Rafaella. Trước đó, anh đã có một chuỗi các chấn thương vào đúng ngày này trong suốt sự nghiệp, khiến nhiều người nghi ngờ về sự trùng hợp kỳ lạ. Neymar đã phản bác lại những tin đồn, khẳng định anh muốn thi đấu nhưng không thể do cảm thấy không ổn.",
     "link": "https://vnexpress.net/nghi-van-neymar-chon-chan-thuong-vao-sinh-nhat-chi-gai-4859975.html",
