--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Thử  nghiệm thuốc mới chữa ung thư gan ác tính",
+    "content": "Nhóm nhà khoa học Nhật Bản đã bắt đầu thử nghiệm lâm sàng một loại thuốc mới điều trị ung thư gan ác tính, với kết quả ban đầu không gây ra tác dụng phụ nghiêm trọng. Thuốc này được phát triển bởi ĐH Khoa học Tokyo và có khả năng phá vỡ hàng rào bảo vệ của khối u, cho phép thuốc miễn dịch tiêu diệt tế bào ung thư. Nghiên cứu cho thấy sự kết hợp của hai loại thuốc đã giúp giảm kích thước khối u đáng kể, mở ra hy vọng cho bệnh nhân mắc bệnh này.",
+    "link": "https://vnexpress.net/thu-nghiem-thuoc-moi-chua-ung-thu-gan-ac-tinh-4859931.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Thuốc mới nào đang được thử nghiệm để điều trị ung thư gan ác tính?",
+    "answers": [
+      {
+        "text": "Thuốc tổng hợp điều trị ung thư gan ác tính",
+        "correct": true
+      },
+      {
+        "text": "Thuốc chống viêm",
+        "correct": false
+      },
+      {
+        "text": "Thuốc giảm đau",
+        "correct": false
+      },
+      {
+        "text": "Thuốc kháng sinh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Có Antony, Betis kiếm nhiều điểm hơn Real",
     "content": "Kể từ khi Antony gia nhập Betis từ Man Utd, đội bóng này đã thu được nhiều điểm hơn cả Real và Atletico tại La Liga. Trong sáu trận đấu, Betis đã kiếm được 13 điểm, trong khi Real chỉ có tám điểm và Atletico có 11 điểm. Antony đã giúp Betis thăng tiến từ vị trí thứ 10 lên thứ 6, và đội bóng này cũng đang đua tranh cho suất dự Champions League mùa tới.",
     "link": "https://vnexpress.net/co-antony-betis-kiem-nhieu-diem-hon-real-4859934.html",
@@ -3569,6 +3596,33 @@
     ]
   },
   {
+    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
+    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
+    "answers": [
+      {
+        "text": "2.500",
+        "correct": true
+      },
+      {
+        "text": "10.000",
+        "correct": false
+      },
+      {
+        "text": "8.500",
+        "correct": false
+      },
+      {
+        "text": "5.000",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cả nước dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
     "content": "Phó thủ tướng Nguyễn Hòa Bình cho biết cả nước dự kiến sẽ giảm số lượng đơn vị hành chính cấp xã từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc này dự kiến sẽ hoàn thành vào tháng 6 tới, với các tiêu chí sẽ được Trung ương ban hành để các địa phương lập phương án sắp xếp. Chất lượng cán bộ cấp xã cũng sẽ được nâng cao, nhằm tăng cường hiệu quả quản lý.",
     "link": "https://vnexpress.net/ca-nuoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
@@ -3595,33 +3649,6 @@
       },
       {
         "text": "3.500",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
-    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
-    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
-    "answers": [
-      {
-        "text": "2.500",
-        "correct": true
-      },
-      {
-        "text": "10.000",
-        "correct": false
-      },
-      {
-        "text": "8.500",
-        "correct": false
-      },
-      {
-        "text": "5.000",
         "correct": false
       }
     ]
@@ -3882,6 +3909,33 @@
     ]
   },
   {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -3908,33 +3962,6 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
@@ -4372,37 +4399,6 @@
       },
       {
         "text": "Chỉ cần bổ sung đường",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cảnh sát Hàn Quốc chuẩn bị ứng phó trước phán quyết luận tội ông Yoon",
-    "content": "Cảnh sát Hàn Quốc đang chuẩn bị cho các tình huống có thể xảy ra trước phán quyết về việc luận tội Tổng thống Yoon Suk-yeol. An ninh sẽ được thắt chặt xung quanh thủ đô Seoul, đặc biệt là tại các điểm nóng dự kiến sẽ diễn ra các cuộc biểu tình lớn từ cả những người ủng hộ và phản đối ông Yoon. Quyền Tổng Ủy viên Cơ quan Cảnh sát Quốc gia cho biết họ chuẩn bị ứng phó với mọi kịch bản, bao gồm việc sử dụng biện pháp mạnh nếu cần thiết.",
-    "link": "https://dantri.com.vn/the-gioi/canh-sat-han-quoc-chuan-bi-ung-pho-truoc-phan-quyet-luan-toi-ong-yoon-20250310164654973.htm",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Cảnh sát Hàn Quốc đang chuẩn bị gì trước phán quyết luận tội ông Yoon?",
-    "answers": [
-      {
-        "text": "Cảnh sát chuẩn bị ứng phó với các cuộc biểu tình",
-        "correct": true
-      },
-      {
-        "text": "Cảnh sát sẽ để ngỏ các ga tàu điện ngầm",
-        "correct": false
-      },
-      {
-        "text": "Cảnh sát không có kế hoạch nào cả",
-        "correct": false
-      },
-      {
-        "text": "Cảnh sát sẽ giảm biện pháp an ninh",
-        "correct": false
-      },
-      {
-        "text": "Cảnh sát không quan tâm đến tình hình",
         "correct": false
       }
     ]
